-m "Ajout du fichier scss"

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="./assets/css/style.css" rel="stylesheet" />
+    <!--<link href="./assets/css/style.css" rel="stylesheet" />-->
+    <link href="./sass/styles.css" rel="stylesheet" />
     <title>OhMyFood</title>
   </head>
   <body>
-    <div class="main-container">
+    <div class="main__container">
       <header>
-        <img src="./images/logo/ohmyfood.png" alt="logo" />
+        <img src="./assets/images/logo/ohmyfood.png" alt="logo" />
       </header>
       <main></main>
       <footer></footer>
