Ajout de la structure de la page web

--- a/index.html
+++ b/index.html
@@ -12,8 +12,48 @@
       <header>
         <img src="./assets/images/logo/ohmyfood.png" alt="logo" />
       </header>
-      <main></main>
-      <footer></footer>
+      <section class="hero">
+        <h1>Réservez le menu qui vous convient</h1>
+        <p></p>
+      </section>
+      <main>
+        <section class="Fonctionnement">
+          <h2>Fonctionnement</h2>
+          <div class="Fonctionnement__bar">
+            <ul></ul>
+          </div>
+        </section>
+        <section class="Restaurants">
+          <h2>Restaurants</h2>
+          <div class="Restaurants__choice">
+            <div class="Restaurants__choice__box--1">
+              <div class="Restaurants__choice__box--1__card">
+                <article class="card"></article>
+              </div>
+              <div class="Restaurants__choice__box--1__card">
+                <article class="card"></article>
+              </div>
+            </div>
+            <div class="Restaurants__choice__box--2">
+              <div class="Restaurants__choice__box--2__card">
+                <article class="card"></article>
+              </div>
+              <div class="Restaurants__choice__box--2__card">
+                <article class="card"></article>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <ul>
+          <h2>ohmyfood</h2>
+          <li><i></i><a href="#">Mentions légales</a></li>
+          <li><i></i><a href="mailto:6wqFP@example.com">Contact</a></li>
+          <li><a href="#">Mentions légales</a></li>
+          <li><a href="mailto:6wqFP@example.com">Contact</a></li>
+        </ul>
+      </footer>
       <h1>Welcome to the Home Page</h1>
     </div>
   </body>
