Mise en place du Header réussi

--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--<link href="./assets/css/style.css" rel="stylesheet" />-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="./sass/styles.css" rel="stylesheet" />
     <title>OhMyFood</title>
   </head>
   <body>
     <div class="main__container">
       <header>
-        <img src="./assets/images/logo/ohmyfood.png" alt="logo" />
+        <div class="header--logo">
+          <img src="./assets/images/logo/ohmyfood.png" alt="logo" />
+        </div>
+        <div class="location">
+          <ul>
+            <li><i class="fas fa-map-marker-alt"></i>Paris, Belleville</li>
+          </ul>
+        </div>
       </header>
       <section class="hero">
         <h1>Réservez le menu qui vous convient</h1>
