--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </header>
       <section class="hero">
         <h1>Réservez le menu qui vous convient</h1>
-        <p></p>
+        <p>Découvrez des restaurants d'exception sélectionnés par nos soins.</p>
+        <button class="hero__button">Explorer nos restaurants</button>
       </section>
       <main>
         <section class="Fonctionnement">
