--- a/index.html
+++ b/index.html
@@ -32,13 +32,31 @@
         <button class="hero__button">Explorer nos restaurants</button>
       </section>
       <main>
-        <section class="Fonctionnement">
+        <section class="fonctionnement">
           <h2>Fonctionnement</h2>
-          <div class="Fonctionnement__bar">
-            <ul></ul>
+          <div class="fonctionnement__bar">
+            <ol>
+              <div class="fonctionnement__bar__step">
+                <li>
+                  <p>1</p>
+                  <i class="fas fa-mobile-alt" aria-hidden="true"></i>Choisissez
+                  un restaurant
+                </li>
+              </div>
+              <li>
+                <p>2</p>
+                <i class="fas fa-list-ul" aria-hidden="true"></i>Composez votre
+                menu
+              </li>
+
+              <li>
+                <p>3</p>
+                <i class="fas fa-store"></i>Dégustez au restaurant
+              </li>
+            </ol>
           </div>
         </section>
-        <section class="Restaurants">
+        <section class="restaurants">
           <h2>Restaurants</h2>
           <div class="Restaurants__choice">
             <div class="Restaurants__choice__box--1">
