--- a/index.html
+++ b/index.html
@@ -58,21 +58,105 @@
         </section>
         <section class="restaurants">
           <h2>Restaurants</h2>
-          <div class="Restaurants__choice">
-            <div class="Restaurants__choice__box--1">
-              <div class="Restaurants__choice__box--1__card">
-                <article class="card"></article>
+          <div class="restaurants__choice">
+            <div class="restaurants__choice__box--1">
+              <div class="restaurants__choice__box--1__card">
+                <button class="new__restaurants">Nouveau</button>
+                <a href="./restaurants/la_palette_du_gout.html">
+                  <article class="card">
+                    <img
+                      src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                      alt="la palette du gout"
+                    />
+                    <div class="card-content">
+                      <div class="card-txt">
+                        <h3 class="card-title">La palette du gout</h3>
+                        <p class="card-subtitle">
+                          Ménilmontant<!--<span class="euro">€</span>-->
+                        </p>
+                      </div>
+                      <div class="card-rating">
+                        <i
+                          class="fa-xs fa-regular fa-heart"
+                          aria-hidden="true"
+                        ></i>
+                      </div>
+                    </div>
+                  </article>
+                </a>
               </div>
-              <div class="Restaurants__choice__box--1__card">
-                <article class="card"></article>
+              <div class="restaurants__choice__box--1__card">
+                <button class="new__restaurants">Nouveau</button>
+                <a href="./restaurants/la_note_enchantee.html">
+                  <article class="card">
+                    <img
+                      src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                      alt="la note enchantée"
+                    />
+                    <div class="card-content">
+                      <div class="card-txt">
+                        <h3 class="card-title">La note enchantée</h3>
+                        <p class="card-subtitle">
+                          Charonne<!--<span class="euro">€</span>-->
+                        </p>
+                      </div>
+                      <div class="card-rating">
+                        <i
+                          class="fa-xs fa-regular fa-heart"
+                          aria-hidden="true"
+                        ></i>
+                  </article>
+                </a>
               </div>
             </div>
-            <div class="Restaurants__choice__box--2">
-              <div class="Restaurants__choice__box--2__card">
-                <article class="card"></article>
+            <div class="restaurants__choice__box--2">
+              <div class="restaurants__choice__box--2__card">
+                <a href="./restaurants/a_la_française.html">
+                  <article class="card">
+                    <img
+                      src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                      alt="a la francaise"
+                    />
+                    <div class="card-content">
+                      <div class="card-txt">
+                        <h3 class="card-title">A la francaise</h3>
+                        <p class="card-subtitle">
+                          Cite Rouge<!--<span class="euro">€</span>-->
+                        </p>
+                      </div>
+                      <div class="card-rating">
+                        <i
+                          class="fa-xs fa-regular fa-heart"
+                          aria-hidden="true"
+                        ></i>
+                      </div>
+                    </div>
+                  </article>
+                </a>
               </div>
-              <div class="Restaurants__choice__box--2__card">
-                <article class="card"></article>
+              <div class="restaurants__choice__box--2__card">
+                <a href="./restaurants/le_delice_des_sens.html">
+                  <article class="card">
+                    <img
+                      src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                      alt="le delice des sens"
+                    />
+                    <div class="card-content">
+                      <div class="card-txt">
+                        <h3 class="card-title">Le delice des sens</h3>
+                        <p class="card-subtitle">
+                          Folie-Méricourt<!--<span class="euro">€</span>-->
+                        </p>
+                      </div>
+                      <div class="card-rating">
+                        <i
+                          class="fa-xs fa-regular fa-heart"
+                          aria-hidden="true"
+                        ></i>
+                      </div>
+                    </div>
+                  </article>
+                </a>
               </div>
             </div>
           </div>
@@ -81,13 +165,12 @@
       <footer>
         <ul>
           <h2>ohmyfood</h2>
-          <li><i></i><a href="#">Mentions légales</a></li>
-          <li><i></i><a href="mailto:6wqFP@example.com">Contact</a></li>
+          <li><i class="fa-solid fa-utensils"></i><a href="#">Mentions légales</a></li>
+          <li><i class="fa-solid fa-handshake-angle"></i><a href="mailto:6wqFP@example.com">Contact</a></li>
           <li><a href="#">Mentions légales</a></li>
           <li><a href="mailto:6wqFP@example.com">Contact</a></li>
         </ul>
       </footer>
-      <h1>Welcome to the Home Page</h1>
     </div>
   </body>
 </html>
