Réalisation du footer terminé

--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
       <footer>
         <ul>
           <h2>ohmyfood</h2>
-          <li><i class="fa-solid fa-utensils"></i><a href="#">Mentions légales</a></li>
-          <li><i class="fa-solid fa-handshake-angle"></i><a href="mailto:6wqFP@example.com">Contact</a></li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="mailto:6wqFP@example.com">Contact</a></li>
+            <li><i class="fa-solid fa-utensils fa-xs space-list" ></i>Proposer un restaurant</li>
+            <li><i class="fa-solid fa-handshake-angle fa-xs space-list-2"></i>Devenir partenaire</li>
+          <li>Mentions légales</</li>
+          <li>Contact</li>
         </ul>
       </footer>
     </div>
