Construction CSS des pages menu presque terminée , taille et agencement intérieur à retravailler pour la prochaine fois

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -20,7 +20,7 @@
     <div class="main__container">
       <header>
         <div class="go__back">
-          <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
+          <a href="../index.html"><i class="fa-solid fa-arrow-left fa-lg"></i></a>
         </div>
         <div class="header--logo">
           <img src="../assets/images/logo/ohmyfood.png" alt="logo" />
@@ -37,10 +37,10 @@
         <div class="menu__content">
           <div class="menu__content__title">
             <h1 class="menu__title">La palette du goût</h1>
-            <i class="fa-xs fa-regular fa-heart" aria-hidden="true"></i>
+            <i class="fa-regular fa-heart fa-2xl" aria-hidden="true"></i>
           </div>
           <div class="entries">
-            <h2 class="entries__title">ENTREES</h2>
+            <h2 class="entries__title"><span>ENTR</span>EES</h2>
             <ul class="entries__list">
               <li>
                 <div class="entries__list__card">
@@ -53,12 +53,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
-                  <div class="entries__list__card__check">
+                  <button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
 
@@ -73,12 +73,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <div class="entries__list__card__check">
+                  <button class="btn-2">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-xs fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
 
@@ -91,19 +91,19 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
-                  <div class="entries__list__card__check">
+                  <button class="btn-3">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-xs fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
             </ul>
           </div>
 
           <div class="plats">
-            <h2 class="plats__title">PLATS</h2>
+            <h2 class="plats__title"><span>PLAT</span>S</h2>
             <ul class="plats__list">
               <li>
                 <div class="plats__list__card">
@@ -116,12 +116,12 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <div class="plats__list__card__check">
+                  <button class="btn-4">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-xs fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
 
@@ -136,12 +136,12 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
-                  <div class="plats__list__card__check">
+                  <button class="btn-5">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-xs fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
 
@@ -152,19 +152,19 @@
                     <p class="plats__list__card__subtitle">Aux agrumes</p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
-                  <div class="plats__list__card__check">
+                  <button class="btn-6">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-xs fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
             </ul>
           </div>
 
           <div class="desserts">
-            <h2 class="desserts__title">DESSERTS</h2>
+            <h2 class="desserts__title"><span>DESS</span>ERTS</h2>
             <ul class="desserts__list">
               <li>
                 <div class="desserts__list__card">
@@ -173,12 +173,12 @@
                     <p class="desserts__list__card__subtitle">Revisité</p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
-                  <div class="desserts__list__card__check">
+                  <button class="btn-7">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-xs fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
 
@@ -193,12 +193,12 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
-                  <div class="desserts__list__card__check">
+                  <button class="btn-8">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-xs fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
 
@@ -213,12 +213,12 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
-                  <div class="desserts__list__card__check">
+                  <button class="btn-9">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-xs fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </button>
                 </div>
               </li>
             </ul>
@@ -233,15 +233,10 @@
       <footer>
         <ul>
           <h2>ohmyfood</h2>
-          <li>
-            <i class="fa-solid fa-utensils"></i><a href="#">Mentions légales</a>
-          </li>
-          <li>
-            <i class="fa-solid fa-handshake-angle"></i
-            ><a href="mailto:6wqFP@example.com">Contact</a>
-          </li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="mailto:6wqFP@example.com">Contact</a></li>
+            <li><i class="fa-solid fa-utensils fa-xs space-list" ></i>Proposer un restaurant</li>
+            <li><i class="fa-solid fa-handshake-angle fa-xs space-list-2"></i>Devenir partenaire</li>
+          <li>Mentions légales</</li>
+          <li>Contact</li>
         </ul>
       </footer>
     </div>
