--- a/restaurants/a_la_française.html
+++ b/restaurants/a_la_française.html
@@ -37,7 +37,7 @@
         <div class="menu__content">
           <div class="menu__content__title">
             <h1 class="menu__title">À la Française</h1>
-            <i class="fa-xs fa-regular fa-heart" aria-hidden="true"></i>
+            <i class="fa-regular fa-heart fa-2xl" aria-hidden="true"></i>
           </div>
           <div class="entries">
             <h2 class="entries__title">ENTREES</h2>
