Mise en forme 'CSS' du site web terminée

--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -40,7 +40,7 @@
             <i class="fa-regular fa-heart fa-2xl" aria-hidden="true"></i>
           </div>
           <div class="entries">
-            <h2 class="entries__title">ENTREES</h2>
+            <h2 class="entries__title"><span>ENTR</span>ÉES</h2>
             <ul class="entries__list">
               <li>
                 <div class="entries__list__card">
@@ -53,12 +53,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
-                  <div class="entries__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
 
@@ -71,12 +71,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <div class="entries__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
 
@@ -91,12 +91,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
-                  <div class="entries__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
 
@@ -111,19 +111,19 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <div class="entries__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
             </ul>
           </div>
 
           <div class="plats">
-            <h2 class="plats__title">PLATS</h2>
+            <h2 class="plats__title"><span>PLAT</span>S</h2>
             <ul class="plats__list">
               <li>
                 <div class="plats__list__card">
@@ -136,12 +136,12 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <div class="plats__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
 
@@ -154,12 +154,12 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
-                  <div class="plats__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
 
@@ -174,19 +174,19 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">45€</p>
-                  <div class="plats__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
             </ul>
           </div>
 
           <div class="desserts">
-            <h2 class="desserts__title">DESSERTS</h2>
+            <h2 class="desserts__title"><span>DESS</span>ERTS</h2>
             <ul class="desserts__list">
               <li>
                 <div class="desserts__list__card">
@@ -199,12 +199,12 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
-                  <div class="desserts__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
 
@@ -219,12 +219,12 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
-                  <div class="desserts__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
 
@@ -237,12 +237,12 @@
                     <p class="desserts__list__card__subtitle">Déstructurée</p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
-                  <div class="desserts__list__card__check">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </div>
+                  </!--button-->
                 </div>
               </li>
             </ul>
@@ -257,15 +257,10 @@
       <footer>
         <ul>
           <h2>ohmyfood</h2>
-          <li>
-            <i class="fa-solid fa-utensils"></i><a href="#">Mentions légales</a>
-          </li>
-          <li>
-            <i class="fa-solid fa-handshake-angle"></i
-            ><a href="mailto:6wqFP@example.com">Contact</a>
-          </li>
-          <li><a href="#">Mentions légales</a></li>
-          <li><a href="mailto:6wqFP@example.com">Contact</a></li>
+            <li><i class="fa-solid fa-utensils fa-xs space-list" ></i>Proposer un restaurant</li>
+            <li><i class="fa-solid fa-handshake-angle fa-xs space-list-2"></i>Devenir partenaire</li>
+          <li>Mentions légales</</li>
+          <li>Contact</li>
         </ul>
       </footer>
     </div>
