--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -40,25 +40,25 @@
             <i class="fa-regular fa-heart fa-2xl" aria-hidden="true"></i>
           </div>
           <div class="entries">
-            <h2 class="entries__title"><span>ENTR</span>EES</h2>
+            <h2 class="entries__title"><span>ENTR</span>ÉES</h2>
             <ul class="entries__list">
               <li>
                 <div class="entries__list__card">
                   <div class="entries__list__card__txt">
                     <h3 class="entries__list__card__title">
-                      Fricasse d'escargots
+                      Fricassée d'escargots
                     </h3>
                     <p class="entries__list__card__subtitle">
                       Au piment d'espelette
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
-                  <button class="btn-1">
+                  <!--button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
 
@@ -73,12 +73,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <button class="btn-2">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check fa-2xl"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
 
@@ -91,12 +91,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
-                  <button class="btn-3">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check fa-2xl"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
             </ul>
@@ -116,12 +116,12 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <button class="btn-4">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check fa-2xl"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
 
@@ -136,12 +136,12 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
-                  <button class="btn-5">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check fa-2xl"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
 
@@ -152,12 +152,12 @@
                     <p class="plats__list__card__subtitle">Aux agrumes</p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
-                  <button class="btn-6">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check fa-2xl"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
             </ul>
@@ -173,12 +173,12 @@
                     <p class="desserts__list__card__subtitle">Revisité</p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
-                  <button class="btn-7">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check fa-2xl"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
 
@@ -193,12 +193,12 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
-                  <button class="btn-8">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check fa-2xl"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
 
@@ -213,12 +213,12 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
-                  <button class="btn-9">
+                  <!--button class="btn-1">
                     <i
-                      class="fa-xs fa-solid fa-circle-check fa-2xl"
+                      class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </button>
+                  </!--button-->
                 </div>
               </li>
             </ul>
