boutons cachés et premier essai d'animation

--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -53,12 +53,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">25€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
 
@@ -73,12 +73,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">35€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
 
@@ -91,12 +91,12 @@
                     </p>
                   </div>
                   <p class="entries__list__card__price">20€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
             </ul>
@@ -116,12 +116,12 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">40€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
 
@@ -136,12 +136,12 @@
                     </p>
                   </div>
                   <p class="plats__list__card__price">35€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
 
@@ -152,12 +152,12 @@
                     <p class="plats__list__card__subtitle">Aux agrumes</p>
                   </div>
                   <p class="plats__list__card__price">44€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
             </ul>
@@ -173,12 +173,12 @@
                     <p class="desserts__list__card__subtitle">Revisité</p>
                   </div>
                   <p class="desserts__list__card__price">18€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
 
@@ -193,12 +193,12 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">22€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
 
@@ -213,12 +213,12 @@
                     </p>
                   </div>
                   <p class="desserts__list__card__price">23€</p>
-                  <!--button class="btn-1">
+                  <button class="btn-1">
                     <i
                       class="fa-solid fa-circle-check fa-2xl"
                       aria-hidden="true"
                     ></i>
-                  </!--button-->
+                  </button>
                 </div>
               </li>
             </ul>
